apps/nginx-proxy-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: npm-ingress
  namespace: nginx-proxy-manager
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/redirect-scheme: https
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - npm.botocudo.net
    secretName: npm-tls
  rules:
  - host: npm.botocudo.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-proxy-manager
            port:
              number: 81
